syntax = "proto3";

option go_package = "/grpc;grpc";

service AuctionService {
  rpc Bid (BidMessage) returns (Ack);

  rpc Result (Empty) returns (ResultReply);

  rpc Subscribe (Empty) returns (IdReply);

  rpc StartAuction(Empty) returns (Ack);

  rpc SendLog(LogEntry) returns (Ack);
}

service Auction{
}

message LogEntry {
  int32 Index = 1;
  string Command = 2;
}

message BidMessage {
  int32 amount = 1;
  int32 id = 2;
}

message Ack {
  string ack = 1;
}

message IdReply{
  int32 id = 1;
}

message ResultReply{
  string outcome = 1;
}

message Empty{

}